Use csae bundle standards

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,9 @@
 !bin/console
 !bin/symfony_requirements
 /vendor/
+composer.lock
+.phpunit.cache/
+.phpunit.result.cache
 
 # Assets and user uploads
 /web/bundles/
@@ -50,3 +53,4 @@
 
 # Embedded web-server pid file
 /.web-server-pid
+.idea
